--- a/src/components/CategoryBar/style.module.css
+++ b/src/components/CategoryBar/style.module.css
@@ -2,12 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  padding: 15px;
-  background-color: #ffffff;
+  padding: 10px;
+  background-color: whitesmoke;
   justify-content: center;
   z-index: 100;
   position: fixed;
-
+  width: 100%;
+  margin: -140px 0 0 0; /* Adjusted to overlap the header  do it other better way????*/
 }
 
 .CategoryItem {
